# videos-access-point

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  pytest.ini
tests/: conftest.py  test_healthcheck.py
tests/auth/: test_auth.py
tests/config/: postgres_config.py
tests/users/: test_user_repository.py  test_user_routers.py  test_user_service.py
tests/videos/: test_video_repository.py  test_video_service.py
web_app/: alembic.ini  main.py
web_app/config/: auth_zero.py  fastapi_config.py  jwt_config.py  postgres_config.py  redis_config.py  settings.py
web_app/db/: postgres_helper.py  redis_helper.py
web_app/exceptions/: auth.py  base.py  handlers.py  users.py  videos.py
web_app/logging/: logger.py
web_app/migrations/: env.py
web_app/migrations/versions/: 2025_05_25_1128-42e6cb656cd7_added_user_model.py  2025_05_31_1148-4201de549834_added_video_model.py
web_app/models/: __init__.py  base.py  user.py  video.py
web_app/repositories/: base_repository.py  repository_interface.py  user_repository.py  video_repository.py
web_app/routers/: auth.py  healthcheck.py  users.py  videos.py
web_app/schemas/: user.py  video.py
web_app/services/auth/: auth_service.py
web_app/services/users/: user_service.py
web_app/services/videos/: video_service.py
web_app/utils/: auth.py  password_manager.py
web_app/utils/token_decoders/: auth_zero_decoder.py  custom_token_decoder.py  token_decoder_interface.py
